syntax = "proto3";

package proto.v1;

import "message.proto";

option csharp_namespace = "Proto.V1";
option go_package = "protov1";
option java_multiple_files = true;
option java_outer_classname = "FeedApiProto";
option java_package = "com.proto.v1";
option objc_class_prefix = "PXX";
option php_namespace = "Proto\\V1";

service FeedAPI {
    rpc PostMessage(PostMessageRequest) returns (PostMessageResponse) {};

    rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse) {};

    rpc Subscribe(SubscribeRequest) returns (stream SubscribeResponse) {};
}

message PostMessageRequest {
    string user_id = 1;
    Message message = 2;
}

message PostMessageResponse {
    Message message = 1;
}

message ListMessagesRequest {
    string user_id = 1;
}

message ListMessagesResponse {
    repeated Message messages = 1;
}

message SubscribeRequest {
    string user_id = 1;
}

message SubscribeResponse {
    Message message = 1;
}
