syntax = "proto3";
package proto.v1;

option csharp_namespace = "Proto.V1";
option go_package = "protov1";
option java_multiple_files = true;
option java_outer_classname = "HenrodApiProto";
option java_package = "com.proto.v1";
option objc_class_prefix = "PXX";
option php_namespace = "Proto\\V1";

service HenrodAPI {
    rpc Echo(EchoRequest) returns (EchoResponse) {}
}

message EchoRequest {}
message EchoResponse {}
