syntax = "proto3";

package proto.v1;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Proto.V1";
option go_package = "protov1";
option java_multiple_files = true;
option java_outer_classname = "MessageProto";
option java_package = "com.proto.v1";
option objc_class_prefix = "PXX";
option php_namespace = "Proto\\V1";

message Message {
    string body = 1;
    google.protobuf.Timestamp created_at = 2;
}
